<resources>
    <string name="app_name">LoginWithSiginFirebase</string>
    <string name="default_sign_in_button">Default Sign In Button</string>
    <string name="custom_sign_in_button">Custom Sign In Button</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>


    <string name="name">NAME</string>
    <string name="address">ADDRESS</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="email_">E-MAIL</string>
    <string name="password_">PASSWORD</string>
    <string name="city_">CITY</string>
    <string name="zip_code">ZIP CODE</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="book_a_cleaner">Book a cleaner</string>
    <string name="rebook">Rebook a previous cleaner </string>
    <string name="create_an_automatic_schedule">Create an automatic cleaning schedule</string>
    <string name="user_name_header">Shahzeb</string>
    <string name="emal_id_header">Shahzeb@gmail.com</string>


    <string name="enter_your_location">Select a saved address</string>
    <string name="types_of_services">Types of services</string>
    <string name="price">Price</string>



    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Fusce lacus nisl, venenatis accumsan fermentum sed, auctor ut magna. Integer ante erat,
        fermentum id feugiat quis, tristique eu tortor. Cras vel sodales diam, ut imperdiet urna.
        Proin et nisl vitae ante scelerisque commodo ornare vel tortor. In eget viverra nisl, eu pellentesque nisi.
        Donec molestie metus sed mauris sagittis, sed vestibulum ante rhoncus. Aenean vel neque id magna pretium viverra.
        Phasellus pellentesque faucibus urna, lacinia scelerisque sem condimentum ut. Praesent at arcu eu orci fringilla
        vehicula eu at ante. Nullam congue felis massa, at vehicula mauris efficitur egestas. In feugiat mi at orci ultricies
        porttitor. Mauris fermentum nunc dui, ut tincidunt libero cursus pretium. Quisque eu vestibulum sapien. Donec non tempus ex.
        Donec in accumsan elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
        Aliquam facilisis maximus enim eget sagittis. Vestibulum tincidunt dolor sit amet interdum porta. Fusce eu odio sem.
        Proin non condimentum elit. Curabitur elit turpis, hendrerit eget velit et,
        sagittis pellentesque felis. Donec in euismod nibh. </string>


</resources>
