<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">


        <LinearLayout
            android:id="@+id/linearBookCleanerbtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/book_a_cleaner"
            android:padding="@dimen/_20sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:gravity="center"
                android:text="@string/book_a_cleaner"
                android:textColor="#fff"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearRebook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_below="@+id/linearBookCleanerbtn"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/rebook"
            android:padding="@dimen/_20sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:gravity="center"
                android:text="@string/rebook"
                android:textColor="#fff"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearCreateAutomaticCleaning"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_below="@+id/linearRebook"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/create_an_automatic"
            android:padding="@dimen/_20sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:gravity="center"
                android:text="@string/create_an_automatic_schedule"
                android:textColor="#fff"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>