<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_350sdp"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/_15sdp"
    android:layout_marginRight="@dimen/_15sdp"
    android:background="@drawable/dialog_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_350sdp"
        android:padding="@dimen/_10sdp">


        <TextView
            android:id="@+id/tvBookACleaner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="BOOK A CLEANER"
            android:textColor="#000"
            android:textSize="@dimen/_15sdp" />


        <EditText
            android:id="@+id/edEnterYourLocation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/tvBookACleaner"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/btnwhite"
            android:hint="@string/enter_your_location"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColorHint="#000"
            android:textSize="@dimen/_12sdp" />


        <EditText
            android:id="@+id/edTypesServices"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/edEnterYourLocation"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/btnwhite"
            android:hint="@string/types_of_services"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColorHint="#000"
            android:textSize="@dimen/_12sdp" />


        <EditText
            android:id="@+id/edPrice"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/edTypesServices"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/btnwhite"
            android:hint="@string/price"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColorHint="#000"
            android:textSize="@dimen/_12sdp" />


        <TextView
            android:id="@+id/tvBookCleanerSubmit"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/about_us_back_bg"
            android:gravity="center"
            android:text="Submit"
            android:textColor="#fff"
            android:textSize="@dimen/_14sdp" />


    </RelativeLayout>

</RelativeLayout>




