<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <RelativeLayout
        android:id="@+id/relativeBackArrowImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:id="@+id/backArrowImage"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/back_arrow" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Sign Up"
            android:textColor="#000"
            android:textSize="@dimen/_15sdp" />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeBackArrowImage"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_10sdp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textColor="#000"
            android:textSize="@dimen/_15sdp"
            android:visibility="gone" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLogin"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:theme="@style/StyledTilEditTextTheme">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:theme="@style/StyledTilEditTextTheme">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="@dimen/_12sdp"
                    app:backgroundTint="#000" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:theme="@style/StyledTilEditTextTheme">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/_12sdp"
                    app:backgroundTint="#000" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:theme="@style/StyledTilEditTextTheme">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/_12sdp"
                    app:backgroundTint="#000" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilFive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:theme="@style/StyledTilEditTextTheme">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textSize="@dimen/_12sdp"
                    app:backgroundTint="#000" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilThree"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:theme="@style/StyledTilEditTextTheme">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city_"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textSize="@dimen/_12sdp"
                        app:backgroundTint="#000" />
                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:id="@+id/tvStates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="States"
                    android:textAllCaps="true"
                    android:textColor="#000"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="gone" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <Spinner
                        android:id="@+id/spinnerStates"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#000" />


                </LinearLayout>


            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:theme="@style/StyledTilEditTextTheme">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edZipCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/zip_code"
                    android:imeOptions="actionSend"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="@dimen/_12sdp"
                    app:backgroundTint="#000" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeEd"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp">

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/login_background"
            android:orientation="vertical">

            <Button
                android:id="@+id/SignUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:background="@null"
                android:text="Sign up"
                android:textColor="#fff" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearAlready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAlreadyMember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="Already member ?"
                android:textColor="#000"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>